[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Stocks/sprite_1.png" type="Texture" id=1]
[ext_resource path="res://UI/Stocks/sprite_2.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://UI/CharacterContainer.gd" type="Script" id=4]

[node name="CharacterContainer" type="MarginContainer"]
margin_right = 196.0
margin_bottom = 100.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 196.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 196.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortrait" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 196.0
margin_bottom = 64.0

[node name="DamagePercent" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Damage Percent"

[node name="CharacterName" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 128.0
margin_bottom = 50.0

[node name="CharacterNameBg" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/CharacterName"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 128.0
margin_bottom = 14.0
rect_min_size = Vector2( 128, 14 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="CharacterNameLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/CharacterName"]
margin_right = 128.0
margin_bottom = 14.0
rect_min_size = Vector2( 128, 14 )
text = "Character Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StocksContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 196.0
margin_bottom = 100.0
rect_min_size = Vector2( 32, 32 )

[node name="StocksFilled" type="TextureRect" parent="VBoxContainer/StocksContainer"]
margin_right = 196.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="StocksEmpty" type="TextureRect" parent="VBoxContainer/StocksContainer"]
margin_right = 196.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 2
